Updated start script with proper java options. Updates logger properties and added sample log configuration file and site configuration file.